--- a/Shoal3/Shoal3.vcxproj
+++ b/Shoal3/Shoal3.vcxproj
@@ -75,11 +75,11 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\freeglut\include;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\glew-1.11.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\freeglut\include;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\glew-1.11.0\include;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalDependencies>freeglut.lib;glew32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\glew-1.11.0\lib;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\freeglut\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\glew-1.11.0\lib;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\freeglut\lib;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -87,11 +87,11 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\freeglut\include;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\glew-1.11.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\freeglut\include;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\glew-1.11.0\include;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalDependencies>freeglut.lib;glew32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\glew-1.11.0\lib;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\freeglut\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\glew-1.11.0\lib;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\freeglut\lib;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -101,13 +101,13 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\freeglut\include;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\glew-1.11.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\freeglut\include;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\glew-1.11.0\include;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>freeglut.lib;glew32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\glew-1.11.0\lib;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\freeglut\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\glew-1.11.0\lib;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\freeglut\lib;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -117,13 +117,13 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\freeglut\include;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\glew-1.11.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\freeglut\include;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\glew-1.11.0\include;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>freeglut.lib;glew32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\glew-1.11.0\lib;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\freeglut\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\glew-1.11.0\lib;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal2\Shoal2\GL\freeglut\lib;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
