add final version

--- a/Shoal3Cuda/Shoal3Cuda/Shoal3Cuda.vcxproj
+++ b/Shoal3Cuda/Shoal3Cuda/Shoal3Cuda.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{9CB1FB0B-F853-402F-88A6-06E845D3874D}</ProjectGuid>
     <RootNamespace>Shoal3Cuda</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
@@ -56,7 +56,20 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>D:\Users\syntaximus\Desktop\freeglut\include;D:\Users\syntaximus\Desktop\glew-2.1.0\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal3\Shoal3Cuda\freeglut\include;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal3\Shoal3Cuda\glew-2.1.0\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <LibraryPath>$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal3\Shoal3Cuda\freeglut\include;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal3\Shoal3Cuda\glew-2.1.0\include;$(IncludePath)</IncludePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <LibraryPath>$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal3\Shoal3Cuda\freeglut\include;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal3\Shoal3Cuda\glew-2.1.0\include;$(IncludePath)</IncludePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <LibraryPath>$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal3\Shoal3Cuda\freeglut\include;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal3\Shoal3Cuda\glew-2.1.0\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -67,8 +80,8 @@
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>cudart_static.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>D:\Users\syntaximus\Desktop\freeglut\lib\x64;D:\Users\syntaximus\Desktop\glew-2.1.0\lib\Release\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>cudart_static.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.0\lib;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal3\Shoal3Cuda\freeglut\lib\x64;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal3\Shoal3Cuda\glew-2.1.0\lib\Release\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <CudaCompile>
       <TargetMachinePlatform>64</TargetMachinePlatform>
@@ -89,7 +102,26 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>cudart_static.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>cudart_static.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.0\lib;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal3\Shoal3Cuda\freeglut\lib\x64;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal3\Shoal3Cuda\glew-2.1.0\lib\Release\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+    </Link>
+    <CudaCompile>
+      <TargetMachinePlatform>64</TargetMachinePlatform>
+    </CudaCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <Link>
+      <AdditionalLibraryDirectories>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.0\lib;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal3\Shoal3Cuda\freeglut\lib\x64;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal3\Shoal3Cuda\glew-2.1.0\lib\Release\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>cudart_static.lib;%(AdditionalDependencies)</AdditionalDependencies>
+    </Link>
+    <CudaCompile>
+      <TargetMachinePlatform>64</TargetMachinePlatform>
+    </CudaCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <Link>
+      <AdditionalLibraryDirectories>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.0\lib;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal3\Shoal3Cuda\freeglut\lib\x64;C:\Users\posejdon256\Documents\Visual Studio 2017\Projects\Shoal3\Shoal3Cuda\glew-2.1.0\lib\Release\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>cudart_static.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <CudaCompile>
       <TargetMachinePlatform>64</TargetMachinePlatform>
